PHP 4.0                                                                    NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||

?? ?? ????, Version 4.0 Beta 4
- OCI8 now returns NULL values in LONG columns correct. (Thies)
- Added support for a C-like assert() function. (Thies)
- Added CyberCash support. (Evan)
- explode() is now binary-safe. (Thies)
- strpos() is now binary-safe. (Thies)
- added XML_Set_Object() function, now you can use the XML-Parser from
  within an object. (Thies)
- Fix warnings compiling in maintainer mode. (Stig)
- Session vars are now decoded into $HTTP_STATE_VARS[] array and the
  globals, depending on track_vars and gpc_globals settings (Andrei)
- Added get_used_files() function - returns a hash mapping the use()'d files
  to their full path (Zeev)
- PHP 4 scripts will now obey the max_execution_time setting and actually
  time out (Rasmus)
- Add configure command to phpinfo() output (Stig)
- Add optional socket path to the mysql_?connect() functions (Rasmus)
- Fix some warnings when compiling in maintainer-mode (Stig)
- Made mysql and gd work as shared extensions again (Stig)
- Make the global GET/POST/Cookie variables and their $HTTP_*_VARS[] counterparts
  be references to each other (Zeev)
- Added support for the 'use' keyword - behaves like 'require', but will not
  use the same file more than once (Andi & Zeev, Zend library)
- Added check to see if a persistent connection is still valid with the
  ODBC interface before reusing (nick@easysoft.com)
- Added DBMaker support (patch by Pax Tsai <paxtsai@lion.syscom.com.tw>)
- Renamed "PECL" to "PEAR" (PHP Extension and Add-on Repository) (Stig)
- buildconf now uses build.mk (Stig)
- Disable symlinks to urls (Rasmus)
- Informix driver now reflects version of ESQL/C used  (Danny)
- Modified session_register() to take variable number of arguments (Andrei)
- Fixed file descriptor leak in thread safe mode (Zeev, Zend library)